<?xml version="1.0" encoding="utf-8"?>
<!-- ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
<ListView
    android:id="@+id/buggerList"
	android:layout_width="fill_parent"
	android:layout_height="300dp"
	android:drawSelectorOnTop="false"
/>
<EditText 
    android:id="@+id/EditTextBuggerName"
    android:layout_height="wrap_content"
    android:hint="@string/buggerName"
    android:layout_width="fill_parent"
/>
<EditText 
    android:id="@+id/EditTextAmount"
    android:layout_height="wrap_content"
    android:hint="@string/deltaAmount"
    android:layout_width="fill_parent"
/>
<EditText
    android:id="@+id/EditTextLocation"
    android:layout_height="wrap_content"
    android:hint="@string/deltaLocation"
    android:layout_width="fill_parent"
/>
<EditText 
    android:id="@+id/EditTextComments"
    android:layout_height="wrap_content"
    android:hint="@string/deltaComment"
    android:layout_width="fill_parent"
/>
<Spinner  
    android:id="@+id/SpinnerBuggerType"  
    android:layout_height="wrap_content"  
    android:prompt="@string/buggertype"  
    android:layout_width="fill_parent"  
    android:entries="@array/bugger_types" >  
</Spinner>  
<Button
    android:id="@+id/addBtn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="addBugger"
    android:text="@string/addNewBugger"   
/>
</LinearLayout>
<!-- /ScrollView-->