<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/buggerInfoName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:textStyle="bold"
            android:typeface="sans"
            android:padding="6dip"
            android:textSize="26dip"
            android:gravity="center"
        />

        <TextView
            android:id="@+id/buggerInfoType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:gravity="center"
		 />

        <TextView
            android:id="@+id/buggerInfoDelta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textSize="18dip"
            android:gravity="center"
         />

        
        <Button
		    android:id="@+id/buggerInfoViewHistory"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="viewHistory"
		    android:text="@string/viewHistory"
		    android:padding="10dip"
		    android:textSize="16dip"
		    android:textColor="#bebebe"
		    android:background="@drawable/custom_button"
		    android:layout_marginBottom="10dip"
		/>

        <EditText
		    android:id="@+id/EditTextAddDelta"
		    android:layout_height="wrap_content"
		    android:hint="@string/deltaAmount"
		    android:layout_width="fill_parent"
		    android:padding="10dip"
		/>

		<EditText
		    android:id="@+id/EditTextAddLocation"
		    android:layout_height="wrap_content"
		    android:hint="@string/deltaLocation"
		    android:layout_width="fill_parent"
		    android:padding="10dip"
		/>

		<EditText 
		    android:id="@+id/EditTextAddComment"
		    android:layout_height="wrap_content"
		    android:hint="@string/deltaComment"
		    android:layout_width="fill_parent"
		    android:padding="10dip"
		/>       
		
		<Button
		    android:id="@+id/buggerInfoAddBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="updateBugger"
		    android:text="@string/updateBugger"
		    android:padding="10dip"
		    android:textSize="16dip"
		    android:textColor="#bebebe"
		    android:background="@drawable/custom_button"
		/>
		
        <Button
		    android:id="@+id/buggerResetDelta"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="buggerResetDelta"
		    android:text="@string/resetDelta"
		    android:textSize="16dip"
		    android:textColor="#bebebe"
		    android:padding="10dip"
		    android:background="@drawable/custom_button"
		    android:layout_marginTop="10dip"
		/>
		
</LinearLayout>
